traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:33: error: ')' expected but 'return' found.
    return true
    ^