traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {
  var n = 0
  val x = getWorldWidth()
  val y = getWorldHeight()
  var right = true
  while(! isInPosition(x-1,y-1)) {
    writeMessage(n)
    n = n+1
    if (right) {
      if (x-1 != getX()) {
        setPos(getX() + 1, getY())
      }
      else {
        setPos(x - 1, getY() +1)
        right = false
      }
    }
    else {
      if (0 != getX()) {
        setPos(getX() -1 , getY())
      }
      else {
        setPos(0, getY() + 1)
        right = true
      }
    }
  }
}


def isInPosition(x: Int, y: Int):Boolean = {
  if ( (x == getX()) && (y== getY())) {
    writeMessage((x+1 * (y+1) -1)
    return true
  }
  else {return false}
}